# study-forge-95

./: .env  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  CODEBASE_ANALYSIS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
apps/api/: .env  INGESTION_SETUP.md  P4_COMPLETION_SUMMARY.md  README.md  export_openapi.py  pyproject.toml  test_ingestion.py  test_quiz_engine.py  test_quiz_simple.py  test_retrieval.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  health.py  schema.py
apps/api/app/api/v1/: __init__.py  documents.py  profile.py  quiz.py  rag.py
apps/api/app/core/: __init__.py  auth.py  config.py
apps/api/app/db/: __init__.py  operations.py  session.py  validation.py
apps/api/app/models/: __init__.py  common.py  documents.py  profile.py  quiz.py  rag.py
apps/api/app/openapi/: __init__.py
apps/api/app/services/: __init__.py  chunking.py  embeddings.py  extraction.py  ingestion.py
apps/api/app/services/quiz/: __init__.py  difficulty_assessor.py  question_evaluator.py  question_generator.py  question_templates.py  quiz_orchestrator.py
apps/api/app/services/rag/: __init__.py  prompt_builder.py  rag_service.py  response_formatter.py
apps/api/app/services/retrieval/: __init__.py  bm25_retrieval.py  citation_extractor.py  hybrid_ranker.py  vector_retrieval.py
apps/api/app/workers/: __init__.py  document_processor.py
apps/api/openapi/: openapi.json
apps/api/tests/: test_schema.py
docs/: ARCHITECTURE.md  OPENAPI_SKETCH.md  P1_RLS_POLICY_TESTS.md  SCHEMA_DIFF.md  TASKS.md  prd.md  research.md
src/: App.tsx  index.css
src/components/chat/: ChatInput.tsx  ContextPanel.tsx  MessageList.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/ui/: context-menu-actions.tsx  file-thumbnail.tsx
src/hooks/: useAuth.tsx  useQueries.ts
src/integrations/supabase/: client.ts  types.ts
src/lib/: api.ts  storage.ts
src/pages/: Auth.tsx  Chat.tsx  Dashboard.tsx  LandingPage.tsx  Library.tsx  Quiz.tsx  Settings.tsx  Upload.tsx
src/utils/: streaming.ts
supabase/: config.toml
supabase/migrations/: 20250903194234_a1e63a17-e7cb-4b0c-bae1-1469d5f41fea.sql  _proposed_fix.sql
(+3 files in other folders)
